# MT

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cc
__old__/: CMakeLists.txt  main.cc
__old__/base/: CMakeLists.txt
__old__/base/include/base/: float.h  float_cmp.h  ignore_unused.h  noexcept_release.h
__old__/geogebra/include/geogebra/: api.h
__old__/geogebra/src/: api.cc
__old__/math/: CMakeLists.txt
__old__/math/include/math/: exp.h  random.h  sqrt.h  utils.h
__old__/math/include/math/consts/: golden_ratio.h
__old__/math/include/math/linalg/: ray.h  vector3f.h  vector_io.h
__old__/modeling/: CMakeLists.txt
__old__/modeling/include/modeling/: cylinder_common.h  cylinder_plasma_quartz.h
__old__/modeling/src/: cylinder_plasma_quartz.cc  fibonacci_sphere.cc  hollow_cylinder.cc
__old__/physics/: CMakeLists.txt
__old__/physics/include/physics/: params.h  plancks_law.h  reflect.h  refract.h
__old__/physics/include/physics/consts/: planck_constant.h  speed_of_light.h
__old__/physics/src/: refract.cc
__old__/physics/test/: CMakeLists.txt
__old__/ray_tracing/: CMakeLists.txt
__old__/ray_tracing/include/ray_tracing/: cylinder_z_infinite.h  elliptic_cylinder_z_infinite.h  shape.h
__old__/ray_tracing/src/: elliptic_cylinder_z_infinite.cc  shape.cc
__old__/ray_tracing/test/: cylinder_z_infinite.cc
base/: CMakeLists.txt
base/include/base/: arithmetic.h  erase_remove_if.h  fast_pimpl.h  float.h  float_cmp.h  ignore_unused.h
base/include/base/config/: build_type.h  float.h  noexcept_release.h
cmake/: ClangTidy.cmake  CompileOptions.cmake  IPO.LTO.cmake  IWYU.cmake
docs/: 00_оптическая_плотность.txt  коэффициент_поглощения_Xe.txt
docs/note/: 00-title-page.tex  01-list-of-performers.tex  02-abstract.tex  03-content.tex  04-terms-and-definitions.tex  05-list-of-abbreviations-and-symbols.tex  06-introduction.tex  10-analysis.tex  20-design.tex  30-engineering.tex  40-research.tex  90-conclusion.tex  91-references.bib  91-references.tex  92-attachments.tex  note.tex  preamble.tex
docs/note/inc/data/: Xe_R=0.35.dat.raw
docs/note/inc/img/: idef0.rsf  mikk.drawio  modules.drawio  nearest-surface.graphml  ray-tracing.graphml  worker.graphml
docs/presentation/: nearest-surface.graphml  worker.graphml
examples/: CMakeLists.txt
examples/fibonacci_sphere/: CMakeLists.txt  main.cc
geogebra/: CMakeLists.txt
geogebra/include/geogebra/: api.h
geogebra/src/: api.cc
gui/: CMakeLists.txt  main.cpp  main_window.cc  main_window.cpp  main_window.h  main_window.ui  mainwindow.cc  mainwindow.ui  xe_paint_widget.cc  xe_paint_widget.h  xe_plot_widget.cc  xe_plot_widget.h  xe_sio2_paint_widget.cc  xe_sio2_paint_widget.h  xe_sio2_plot_widget.cc  xe_sio2_plot_widget.h  xe_xe_sio2_paint_widget.cc  xe_xe_sio2_paint_widget.h  xe_xe_sio2_plot_widget.cc  xe_xe_sio2_plot_widget.h
math/: CMakeLists.txt
math/include/math/: bilinear_interpolation.h  equation.h  fast_pow.h  log.h  random.h  sqrt.h  traits_base.h  utils.h
math/include/math/consts/: golden_ratio.h  pi.h
math/include/math/float/: compare.h  eps.h  exp.h  log.h  pow.h  sqrt.h
math/include/math/geometry/: cylinder_z.h  cylinder_z_infinite.h  disk.h  fibonacci_sphere.h  plane.h  ray.h  reflect.h  refract.h  shape.h  vector.h  vector3f.h  vector_io.h
math/include/math/linalg/: fibonacci_sphere.h  reflect.h  refract.h  vector.h  vector3f.h  vector_io.h
math/include/math/types/: float.h  float_cmp.h
math/src/: equation.cc  random.cc  utils.cc
math/src/geometry/: cylinder_z.cc  cylinder_z_infinite.cc  disk.cc  fibonacci_sphere.cc  plane.cc  reflect.cc  refract.cc  shape.cc
math/src/linalg/: fibonacci_sphere.cc  reflect.cc  refract.cc
math/test/: CMakeLists.txt  cylinder_z_infinite.cc  equation_test.cc  expect_vector_near.cc  expect_vector_near.h  reflect.cc  refract.cc
modeling/: CMakeLists.txt
modeling/include/modeling/: cylinder_common.h  cylinder_plasma.h  cylinder_plasma_quartz.h  fibonacci_sphere.h  hollow_cylinder.h  solid_cylinder.h  worker.h
modeling/src/: cylinder_plasma.cc  cylinder_plasma_quartz.cc  fibonacci_sphere.cc  hollow_cylinder.cc  solid_cylinder.cc
physics/: CMakeLists.txt
physics/include/physics/: params.h  plancks_law.h  reflect.h  refract.h  xenon_absorption_coefficient.h
physics/include/physics/consts/: boltzmann_constant.h  planck_constant.h  speed_of_light.h
physics/include/physics/params/: air.h  mirror.h  plasma.h  quartz.h  xenon_absorption_coefficient.h
physics/src/: plasma.cc  reflect.cc  refract.cc
physics/test/: CMakeLists.txt  expect_vector_near.cc  expect_vector_near.h  reflect.cc  refract.cc
ray_tracing/: CMakeLists.txt
ray_tracing/include/ray_tracing/: cylinder_z.h  cylinder_z_infinite.h  disk.h  elliptic_cylinder_z_infinite.h  plane.h  shape.h  utils.h
ray_tracing/src/: cylinder_z.cc  cylinder_z_infinite.cc  disk.cc  elliptic_cylinder_z_infinite.cc  plane.cc  shape.cc  utils.cc
ray_tracing/test/: CMakeLists.txt  cylinder_z_infinite.cc
scripts/: trim.py
scripts/clang-format/: clang-format.sh
scripts/data/: delta_nu.py  format.py
scripts/iwyu/: gtest.imp  mappings.imp  qt6.7.0_1.imp
scripts/iwyu/standard_mappings/: default_mappings.imp  libcxx.imp  stl.c.headers.imp
test/: CMakeLists.txt
